--- a/client-side/.vscode/launch.json
+++ b/client-side/.vscode/launch.json
@@ -3,5 +3,10 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [{
+        "type": "node",
+        "request": "launch",
+        "program": "${workspaceFolder}/index.js",
+        "console": "integratedTerminal"
+    }]
 }
